wmbattery (2.42) UNRELEASED; urgency=low

  * Stop building with flash-in-the-pan HAL. Instead update acpi
    interface to use /sys/class/power_supply.
    Note that this needs acpica_version 20120111, as provided by a recent
    linux kernel version. Closes: #613166
    (Patch developed by Mageia.)

 -- Joey Hess <joeyh@debian.org>  Tue, 30 Apr 2013 21:24:41 -0400

wmbattery (2.41) unstable; urgency=low

  * Accumulated packaging modernizations. Closes: #666370

 -- Joey Hess <joeyh@debian.org>  Fri, 30 Mar 2012 10:20:17 -0400

wmbattery (2.40) unstable; urgency=low

  * Add -s option which can be used to ignore fluctuations
    in reported battery charge (as seen on the EeePC) when
    using -e. Closes: #527870 (Joseph Huang)

 -- Joey Hess <joeyh@debian.org>  Sat, 09 May 2009 16:53:10 -0400

wmbattery (2.39) unstable; urgency=low

  * Use debhelper v7; rules file minimisation.
  * Depend on hal since /proc/acpi is gone from the default kernels now.
    Closes: #491099

 -- Joey Hess <joeyh@debian.org>  Tue, 22 Jul 2008 00:23:47 -0400

wmbattery (2.38) unstable; urgency=low

  * Magic header file reordering to work around the disgusting
    linux-libc-dev/libc headers conflicts (#435700). Closes: #463811

 -- Joey Hess <joeyh@debian.org>  Wed, 27 Feb 2008 15:08:53 -0500

wmbattery (2.37) unstable; urgency=low

  * Support reconnecting to dbus if it's restarted. (AKA giant dbus-PITA)

 -- Joey Hess <joeyh@debian.org>  Wed, 20 Feb 2008 22:44:00 -0500

wmbattery (2.36) unstable; urgency=low

  * Support reconnecting to hal if the connection is closed, as happens
    if the hal is restarted.

 -- Joey Hess <joeyh@debian.org>  Wed, 20 Feb 2008 22:29:00 -0500

wmbattery (2.35) unstable; urgency=low

  * Don't spew error messages if optional hal properties are not available.
  * Only check to see if a battery is charging if hal reports there is AC
    power. This is perhaps not 100% correct in systems with multiple batteries