@@ -20,6 +20,7 @@ some improvements in wmbattery:
   - ACPI support, including multiple battery support and battery charging
     completion countdown timer.
   - HAL support.
+  - upower support.
   - Can make its own estimatess of time remaining or time until full
     charge, even if APM does not.
 
