@@ -11,9 +11,8 @@ is a battery monitor.  It is used to visually display the system's battery
 status.
 .PP
 .B wmbattery
-can get battery information using HAL, APM, ACPI, or
-the SPIC controller in some Sony laptops. You need to build your kernel with
-support for at least one of these for the program to work.
+can get battery information using upower, HAL, APM, ACPI, or
+the SPIC controller in some Sony laptops.
 .B wmbattery
 is dockable using WindowMaker and AfterStep window managers; under
 other window managers
